<resources>
    <!-- App Name -->
    <string name="app_name">RadioNode Panel</string>

    <!-- StartSelectActivity -->
    <string name="cloud">CLOUD</string>
    <string name="local">LOCAL</string>

    <!-- CloudVerifyActivity -->
    <string name="api_secret">api_secret</string>
    <string name="api_secret_enter">API SECRET</string>
    <string name="api_key">api_key</string>
    <string name="api_key_enter">API KEY</string>
    <string name="search">디바이스 MAC</string>
    <string name="search_enter">SEARCH</string>
    <string name="admin">관리자 인증번호 4자리</string>
    <string name="admin_error">관리자 인증번호는 4자리 입력하세요.</string>
    <string name="admin_helper">관리자 인증번호는 따로 적어두어 잊지 마십시오.</string>
    <string name="admin_enter">ADMIN</string>
    <string name="refresh">새로고침 주기</string>
    <string name="refresh_error">1 ~ 60 사이의 값을 입력하세요.</string>
    <string name="refresh_helper">새로고침 주기는 분 단위입니다.</string>
    <string name="refresh_enter">REFRESH</string>
    <string name="sensoring_btn">SENSORING START</string>
    <string name="tapaculo">GO TO Tapaculo365</string>

    <!-- AlertDialog -->
    <string name="positive_alert">CONFIRM</string>

    <!-- CloudSettingActivity -->
    <string name="show_two">2개 센서값 보기</string>
    <string name="show_sensor_setting">화면 센서값 설정</string>
    <string name="device_info">디바이스 정보</string>
    <string name="device_info_enter">DEVICE INFORMATION</string>
    <string name="volume">볼륨 조절</string>
    <string name="volume_duration">소리 지속시간</string>
    <string name="network_on_sound">네트워크 연결음</string>
    <string name="network_off_sound">네트워크 끊김음</string>
    <string name="duration">지속시간</string>
    <string name="setting">SETTING DONE</string>
    <string name="slider_desc">slider.contentDescription = contentDescription</string>

    <!-- CloudMainActivity -->
    <string name="setting_btn">SETTING</string>
    <string name="refresh_btn">REFRESH</string>
    <string name="isNetwork">네트워크 연결이 불안정 합니다.</string>
    <string name="isServer">OpenAPI 통신 횟수 초과 혹은 서버에 문제가 있습니다.</string>
    <string name="Loading">잠시만 기다려 주세요 ...</string>
    <string name="isDataReceive">디바이스가 서버로 데이터를 전송하지 못하고 있습니다.</string>

    <!-- SocketActivity -->
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <string name="socket_start_btn">SOCKET COMMUNICATION</string>
</resources>