<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CloudMainActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linear_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:showDelay="@integer/material_motion_duration_short_1" />

    <LinearLayout
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/device_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="70sp" />

        <Button
            android:id="@+id/setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/setting_btn"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/network_state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/isNetwork" />

        <TextView
            android:id="@+id/server_state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/isServer" />

        <TextView
            android:id="@+id/device_data_receive_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/isDataReceive" />

        <TextView
            android:id="@+id/device_data_receive_state_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Loading" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/include_data_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_data_unit_ko_1"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_marginLeft="15dp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_data_1"
                android:layout_width="500dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:autoSizeMaxTextSize="500sp"
                android:autoSizeMinTextSize="300sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_data_unit_1"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_data_unit_ko_2"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_marginLeft="15dp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:maxLines="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_data_2"
                android:layout_width="500dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:autoSizeMaxTextSize="500sp"
                android:autoSizeMinTextSize="300sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/show_data_unit_2"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/refresh_btn"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>